argocd/greeter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: greeter
  template:
    metadata:
      labels:
        app: greeter
    spec:
      containers:
      - image: docker.io/library/greeter:0.1
        name: greeter
        ports:
        - containerPort: 80
