argocd/greeter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter
spec:
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: greeter
