argocd/greeter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeter
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: greeter.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: greeter
            port:
              number: 80
